<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity"
    tools:context=".Activities.InputActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/mango_two"
            app:popupTheme="@style/Theme.Lesson_8.PopupOverlay"
            app:title="@string/wtf_title" />
    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStart16"
        android:layout_marginTop="@dimen/marginTop35"
        android:layout_marginEnd="@dimen/marginStart16"
        android:background="@android:color/transparent"
        android:hint="@string/title_example"
        android:inputType="textNoSuggestions"
        android:textColor="@color/warm_grey_four"
        android:textSize="@dimen/titleSize20"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout" />

    <EditText
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStart16"
        android:layout_marginTop="@dimen/marginTop12"
        android:layout_marginEnd="@dimen/marginStart16"
        android:background="@android:color/transparent"
        android:hint="@string/text_example"
        android:inputType="textNoSuggestions"
        android:textColor="@color/black_54"
        android:textSize="@dimen/textSize16"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/color"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>